--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>假名学习</title>
+    <title>平假名片假名学习工具</title>
     <style>
         body {
-            font-family: 微软雅黑, 黑体, Arial, sans-serif;
+            font-family: Arial, sans-serif;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -36,7 +36,6 @@
             align-items: center;
             justify-content: center;
             font-size: 2.5em;
-            font-family: 'Times New Roman', 楷体, Times, serif;
             background-color: #fff;
             border: 2px solid #ccc;
             border-radius: 10px;
@@ -49,7 +48,7 @@
 
         .buttons {
             display: flex;
-            gap: 30px;
+            gap: 10px;
         }
 
         button {
@@ -74,7 +73,7 @@
 </head>
 <body>
 
-    <h1>平假名・片假名・罗马音对照</h1>
+    <h1>平假名・片假名・罗马音学习</h1>
 
     <div class="container">
         <div id="hiraganaBox" class="box"></div>
@@ -204,9 +203,10 @@
         ];
 
         let currentKana = {};
-        let hidden = true;
+        let hidden = true;  // 控制显示/隐藏的状态
+        let showPosition = "";  // 记录当前显示的方格位置
 
-        // 初始化显示
+        // 页面加载时自动刷新
         window.onload = function() {
             refreshRandom();
         };
@@ -218,7 +218,7 @@
 
             // 随机选择显示位置
             const positions = ["hiragana", "katakana", "romaji"];
-            const showPosition = positions[Math.floor(Math.random() * positions.length)];
+            showPosition = positions[Math.floor(Math.random() * positions.length)];
 
             // 隐藏其他两个方格的内容
             document.getElementById("hiraganaBox").textContent = showPosition === "hiragana" ? currentKana.hiragana : "";
@@ -232,6 +232,7 @@
         // 显示/隐藏按钮功能，仅在当前步骤中切换显示状态
         function toggleVisibility() {
             hidden = !hidden;
+
             if (!hidden) {
                 // 显示所有方格的内容
                 document.getElementById("hiraganaBox").textContent = currentKana.hiragana;
@@ -239,7 +240,15 @@
                 document.getElementById("romajiBox").textContent = currentKana.romaji;
             } else {
                 // 隐藏非选中的方格
-                refreshRandom(); // 隐藏时重置为当前刷新状态
+                if (showPosition !== "hiragana") {
+                    document.getElementById("hiraganaBox").textContent = "";
+                }
+                if (showPosition !== "katakana") {
+                    document.getElementById("katakanaBox").textContent = "";
+                }
+                if (showPosition !== "romaji") {
+                    document.getElementById("romajiBox").textContent = "";
+                }
             }
         }
     </script>
