--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>平假名片假名学习工具</title>
+    <title>假名学习</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 微软雅黑, 楷体, Arial, sans-serif;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -48,7 +48,7 @@
 
         .buttons {
             display: flex;
-            gap: 10px;
+            gap: 30px;
         }
 
         button {
@@ -73,7 +73,7 @@
 </head>
 <body>
 
-    <h1>平假名・片假名・罗马音学习</h1>
+    <h1>平假名・片假名・罗马音对照</h1>
 
     <div class="container">
         <div id="hiraganaBox" class="box"></div>
