--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             height: 150px;
             display: flex;
             align-items: center;
+            font-family: 'Times New Roman', 楷体, Times, serif;
             justify-content: center;
             font-size: 2.5em;
             background-color: #fff;
